# fantastic-system

./: .gitignore  pyproject.toml
secrets/: .env.example
src/: alembic.ini
src/.migrations/: env.py
src/.migrations/versions/: 2024_12_08_1621-31c622eb58b3_add_user.py  2024_12_08_1647-5252bf9c1e3c_change_pk.py  2024_12_08_1923-86ce371678be_add_tables.py  2024_12_14_1121-8731a349383d_add_question_technology.py  2024_12_14_1128-3c41945c1670_add_question_technology2.py  2024_12_14_1208-8fbd8c490a50_add_user_password.py  2025_01_04_1505-85ba04a41aa0_add_error.py  2025_02_19_1612-bcaa40f039df_init.py  2025_02_19_1614-fa38cea6da7c_add_index_user_tg_id.py  2025_02_19_1615-b4c3c4227495_add_index_user_tg_id_unique.py  2025_03_09_1404-2160de54e874_add_score_to_assessment.py
src/app/apps/interview/dto/: ai_assessment.py  answer.py  user_question.py
src/app/apps/interview/entity/: ai_assessment.py  question.py
src/app/apps/interview/repository/: ai_assessment.py  answer.py  question.py  question_technology.py  technology.py  user_question.py
src/app/apps/interview/usecase/: ai_assessment.py  answer.py  question.py
src/app/apps/interview/utils/: request_service.py
src/app/apps/user/dto/: user.py
src/app/apps/user/repository/: user.py
src/app/tools/: cache.py  uow.py
src/app/tools/protocol/: cache.py
src/app/tools/repository/sql_alchemy/: sql_alchemy.py  sql_alchemy_v2.py  uow.py
src/apps/: cache_protocol.py  uow.py
src/apps/dependencies/protocol/: cache_service.py
src/apps/interview/dto/: question.py
src/apps/interview/entity/: question.py
src/apps/interview/repository/: question.py
src/apps/interview/usecase/: question.py
src/apps/user/dto/: user.py
src/apps/user/repository/: user.py
src/core/: cache.py  config.py  database.py
src/model/: __init__.py  ai_assessment.py  answer.py  base.py  error.py  question.py  question_technology.py  technology.py  user.py  user_question.py
src/tools/: sentry.py
tests/: conftest.py
tests/apps/interview/entity/: question.py  test_question.py
tests/apps/interview/repository/answer/: test_create_answer.py
tests/apps/interview/repository/question/: conftest.py  test_get_questions.py  test_get_unanswered_questions.py
tests/apps/interview/usecase/answer/: test_process_user_answer.py
tests/apps/interview/usecase/question/: test_get_question_training.py
tests/apps/tools/repository/v2/: base.py  conftest.py  models.py
tests/apps/tools/repository/v2/all/: test_all_driver.py
tests/apps/tools/repository/v2/count/: test_count_driver.py
tests/apps/tools/repository/v2/create/: test_create_driver.py
tests/apps/tools/repository/v2/delete/: test_delete_driver.py
tests/apps/tools/repository/v2/exists/: test_exists_driver.py
tests/apps/tools/repository/v2/filter/: test_filter_driver.py
tests/apps/tools/repository/v2/find/: test_find_driver.py
tests/apps/tools/repository/v2/get/: test_get_driver.py
tests/apps/tools/repository/v2/get_or_create/: test_get_or_create_driver.py
tests/interview/repository/question/: test_get_questions.py
(+3 files in other folders)
